# grid-tactics-tcg

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  check_stats.py  cloud_train.py  dashboard.bat  dashboard.py  manage_pods.py  nixpacks.toml  play.bat  pvp_server.py  pyproject.toml  railway.json  requirements.txt  stats.bat  stats.py  tensor_train.py  tensorboard.bat  train.bat  train_long.bat  watch_game.py
wiki/: .env.example  .gitignore  Dockerfile  LocalSettings.php  Makefile  README.md  docker-compose.yml  docker-entrypoint-wiki.sh  pyproject.toml  railway.json
wiki/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
wiki/.planning/phases/01-foundation-schema-design/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md
wiki/.planning/phases/02-mediawiki-smw-on-railway/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
wiki/.planning/phases/03-card-page-generator/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md
wiki/db-init/: 01-create-wiki-user.sql
wiki/sync/: backup.py  bootstrap_schema.py  bootstrap_template.py  card_history.py  check_drift.py  cleanup_deprecated.py  client.py  create_sample_card.py  fix_dead_links.py  patch_diff.py  patch_page.py  purge_deprecated.py  rebuild_patches.py  schema.py  sync_cards.py  sync_deckguide.py  sync_filters.py  sync_homepage.py  sync_patches.py  sync_polish.py  sync_showcase.py  sync_taxonomy.py  sync_wiki.py  verify_schema.py  verify_smw.py
wiki/sync/templates/: Card.wiki  DeprecatedCard.wiki  ManuallyMaintained.wiki
wiki/tests/: test_check_drift.py  test_dry_run.py  test_idempotency.py  test_sync_cards.py
(+654 files in other folders)
