[project]
name = "grid-tactics-tcg"
version = "0.1.0"
description = "A 5x5 grid tactical card game with reinforcement learning"
requires-python = ">=3.12"
dependencies = ["numpy>=2.2,<3.0"]

[project.optional-dependencies]
rl = ["stable-baselines3[extra]>=2.8,<3.0", "sb3-contrib>=2.8,<3.0"]
pvp = ["Flask-SocketIO>=5.6,<6.0", "simple-websocket>=1.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.13", "ruff>=0.9", "playwright>=1.40"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
